# Fridgprompt

./: .gitignore  README.md  USAGE.md  pyproject.toml
fridgprompt/: __init__.py  analyzer.py  cli.py  models.py  stats.py  storage.py
